# openADx_simulation_demonstrator

./: NOTICE  README.MD
openadx_demo/: package.xml  setup.cfg  setup.py
openadx_demo/openadx_demo/topics/: demo.py  sender.py
openadx_msgs/: CMakeLists.txt  package.xml
openadx_msgs/msg/: DetectedObject.msg  DetectedObjectList.msg  VehicleControl.msg  VehicleState.msg
