<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openadx_demo</name>
  <version>0.0.1</version>
  <description>OpenADX Hackathon demo</description>
  <maintainer email="lietzau@tesis.de">Stefan Lietzau</maintainer>
  <license>Eclipse Public License - v 2.0</license>
  <author email="lietzau@tesis.de">Stefan Lietzau</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>openadx_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
