cmake_minimum_required(VERSION 3.5)

project(openadx_msgs)

if(NOT WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -Wall -Wextra")
endif()

find_package(ament_cmake REQUIRED)
# find the ROS message code generators
find_package(rosidl_default_generators REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(geometry_msgs REQUIRED)

# declare the message files to generate code for
set(msg_files
    "msg/VehicleControl.msg"
    "msg/VehicleState.msg"
    )

# declare the service files to generate code for
set(srv_files
    )

rosidl_generate_interfaces(${PROJECT_NAME}
    ${msg_files}
    ${srv_files}
    DEPENDENCIES builtin_interfaces geometry_msgs
    )

ament_export_dependencies(rosidl_default_runtime)

ament_package()
